Feat : 한글 Scanner

--- a/MyCompiler/MyCompiler.vcxproj.filters
+++ b/MyCompiler/MyCompiler.vcxproj.filters
@@ -14,9 +14,6 @@
     <ClCompile Include="MyCompiler.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Scanner.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -29,11 +26,14 @@
     <ClCompile Include="Interpreter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Types.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Token.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Scanner.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
@@ -42,5 +42,7 @@
     </ClInclude>
     <ClInclude Include="Node.h" />
     <ClInclude Include="Interpreter.h" />
+    <ClInclude Include="Types.h" />
+    <ClInclude Include="Token.h" />
   </ItemGroup>
 </Project>
